<resources>
    <string name="app_name">Fever Checker</string>
    <string name="applogo">applogo</string>
    <string name="title_activity_bmi_result">BmiResultActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="result">Result</string>
    <string name="_565_65446">565.65446</string>
    <string name="gender">Gender</string>
    <string name="normal">Normal</string>
    <string name="recalculate_your_bmi">Recalculate Your BMI---</string>
    <string name="good_or_bad_symbol">good or bad symbol</string>
    <string name="enter_your_body_temperature_in_celsius">Enter Your Body Temperature in celsius:</string>
    <string name="submit">SUBMIT</string>
    <string name="hypothermia">Hypothermia</string>
    <string name="high_fever">High Fever</string>
    <string name="check">Check</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_your_heart_rate_perminutes">Enter Your Heart Rate PerMinutes:</string>
    <string name="as_per_the_rule_of_indian_pharmacopoeia">As per the Rule of Indian Pharmacopoeia</string>
    <string name="heartimage">heartImage</string>
    <string name="spo2_image">spo2 image</string>
    <string name="heartrate_checking">HeartRate Checking</string>
    <string name="checking_spo2">Checking Spo2</string>
    <string name="privicy_plolicy_image">Privicy plolicy Image</string>
    <string name="explor_image">Explor image</string>
    <string name="privicy_policy">Privicy Policy</string>
    <string name="explor">Explor</string>
    <string name="weight_checking">Weight checking</string>
    <string name="how_to_check_for_fever">How to check for Fever</string>
    <string name="weightchackimage">WeightChackImage</string>
    <string name="feverimage">FeverImage</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="_55">55</string>
    <string name="age">Age</string>
    <string name="_19">19</string>
    <string name="height">Height</string>
    <string name="_170">170</string>
    <string name="cm">cm</string>
    <string name="calculate_your_bmi">Calculate Your BMI---</string>





</resources>