<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgWhite_bgBlack"
    android:layout_marginTop="15sp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/crdlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/Fever"
            android:layout_width="0sp"
            android:layout_height="125sp"
            app:cardBackgroundColor="@color/crdbgcolor"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:elevation="10sp"
            app:cardCornerRadius="10sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/fever"
                android:contentDescription="@string/feverimage" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Weight"
            android:layout_width="0sp"
            android:layout_height="125sp"
            app:cardBackgroundColor="@color/crdbgcolor"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:elevation="10sp"
            app:cardCornerRadius="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/weight"
                    android:contentDescription="@string/weightchackimage" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lblLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crdlayout1"
        android:weightSum="2">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black_white"
            android:textAlignment="center"
            android:layout_marginTop="5sp"
            android:text="@string/how_to_check_for_fever"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black_white"
            android:textAlignment="center"
            android:layout_marginTop="5sp"
            android:text="@string/weight_checking"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/crdlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/crdbgcolor"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblLayout1">

        <androidx.cardview.widget.CardView
            android:id="@+id/HeartRate"
            android:layout_width="0sp"
            android:layout_height="125sp"
            app:cardBackgroundColor="@color/crdbgcolor"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:elevation="10sp"
            app:cardCornerRadius="10sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/heartrate"
                android:contentDescription="@string/heartimage" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/spo2"
            android:layout_width="0sp"
            android:layout_height="125sp"
            app:cardBackgroundColor="@color/crdbgcolor"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:elevation="10sp"
            app:cardCornerRadius="10sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/oxygen"
                android:contentDescription="@string/spo2_image" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lblLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crdlayout2"
        android:weightSum="2">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black_white"
            android:textAlignment="center"
            android:layout_marginTop="5sp"
            android:text="@string/heartrate_checking"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black_white"
            android:textAlignment="center"
            android:layout_marginTop="5sp"
            android:text="@string/checking_spo2"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/crdlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblLayout2">

        <androidx.cardview.widget.CardView
            android:id="@+id/PrivicePolicy"
            android:layout_width="0sp"
            android:layout_height="125sp"
            app:cardBackgroundColor="@color/crdbgcolor"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:elevation="10sp"
            app:cardCornerRadius="10sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/privicypolicy"
                android:contentDescription="@string/privicy_plolicy_image" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Explore"
            android:layout_width="0sp"
            android:layout_height="125sp"
            app:cardBackgroundColor="@color/crdbgcolor"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:elevation="10sp"
            app:cardCornerRadius="10sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/explore"
                android:contentDescription="@string/explor_image" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crdlayout3"
        android:weightSum="2">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black_white"
            android:textAlignment="center"
            android:layout_marginTop="5sp"
            android:text="@string/privicy_policy"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black_white"
            android:textAlignment="center"
            android:layout_marginTop="5sp"
            android:text="@string/explor"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>