<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgWhite_bgBlack"
    android:layout_marginTop="20sp"
    tools:context=".FeverActivity">

    <TextView
        android:id="@+id/lblMeaasge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black_white"
        android:text="@string/enter_your_body_temperature_in_celsius"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblMeaasge"
        app:layout_constraintVertical_bias="0.178" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/HbtnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumber"
        app:layout_constraintVertical_bias="0.183"
        android:text="@string/submit"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HbtnSubmit">

        <CheckBox
            android:id="@+id/cheHypothermia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:buttonTintMode="screen" />

        <TextView
            android:id="@+id/lblHypothermia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hypothermia"
            android:textColor="@color/black_white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cheNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:buttonTint="@color/green"
            android:buttonTintMode="screen" />

        <TextView
            android:id="@+id/lblNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_white"
            android:text="@string/normal"
            android:textSize="15sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chehigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:buttonTint="@color/red"
            android:buttonTintMode="screen" />

        <TextView
            android:id="@+id/lblHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_fever"
            android:textColor="@color/black_white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>