<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e1d1d"
    tools:context=".WeightActivity">

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_centerHorizontal="true"
      android:id="@+id/centerHorizontalLine"/>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:id="@+id/centerVerticalLine"/>


  <RelativeLayout
      android:id="@+id/male"
      android:layout_width="130dp"
      android:layout_height="140dp"
      android:layout_toStartOf="@id/centerHorizontalLine"
      android:background="@drawable/malefemalenotfocus"
      android:layout_above="@id/heightLayout"
      android:layout_marginBottom="30dp"
      android:focusable="true"
      android:layout_marginEnd="18dp">


    <ImageView
        android:layout_width="150px"
        android:layout_height="120px"
        android:layout_centerInParent="true"
        android:src="@drawable/male"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/maleText"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maleText"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/male"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:textColor="#ffffff"
        android:textSize="19sp"/>

  </RelativeLayout>



  <RelativeLayout
      android:layout_width="130dp"
      android:layout_height="140dp"
      android:id="@+id/female"
      android:layout_toEndOf="@id/centerHorizontalLine"
      android:layout_marginStart="18dp"
      android:layout_above="@id/heightLayout"
      android:layout_marginBottom="30dp"
      android:background="@drawable/malefemalenotfocus">

    <ImageView
        android:layout_width="150px"
        android:layout_height="120px"
        android:id="@+id/femaleImage"
        android:layout_marginBottom="20dp"
        android:focusable="true"
        android:layout_above="@id/femaleText"
        android:layout_centerInParent="true"
        android:src="@drawable/female"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/femaleText"
        android:layout_alignParentBottom="true"
        android:text="@string/female"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"/>



  </RelativeLayout>

  <RelativeLayout
      android:id="@+id/weight"
      android:layout_width="130dp"
      android:layout_height="160dp"
      android:layout_toStartOf="@+id/centerHorizontalLine"
      android:layout_marginEnd="18dp"
      android:layout_below="@id/heightLayout"
      android:layout_marginTop="60dp"
      android:background="@drawable/height_background">

    <TextView
        android:id="@+id/weightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/weightNumeric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_55"
        android:layout_below="@id/weightText"
        android:layout_centerHorizontal="true"
        android:textSize="29sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>




    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true">

      <ImageView
          android:id="@+id/weightMinus"
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:src="@drawable/minus"/>



    </RelativeLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp">

      <ImageView
          android:id="@+id/weightPlus"
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:src="@drawable/add"/>

    </RelativeLayout>

  </RelativeLayout>


  <RelativeLayout
      android:layout_width="140dp"
      android:layout_height="160dp"
      android:layout_toEndOf="@+id/centerHorizontalLine"
      android:layout_marginStart="18dp"
      android:layout_below="@id/heightLayout"
      android:layout_marginTop="60dp"
      android:background="@drawable/height_background">

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/ageNumeric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_19"
        android:layout_below="@id/ageText"
        android:layout_centerHorizontal="true"
        android:textSize="29sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true">

      <ImageView
          android:id="@+id/ageMinus"
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:src="@drawable/minus"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp">

      <ImageView
          android:id="@+id/agePlus"
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:src="@drawable/add"/>

    </RelativeLayout>

  </RelativeLayout>

  <RelativeLayout
      android:id="@+id/heightLayout"
      android:layout_width="310dp"
      android:layout_height="150dp"
      android:layout_above="@id/centerVerticalLine"
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="30dp"
      android:layout_marginLeft="30dp"
      android:layout_marginEnd="30dp"
      android:layout_marginRight="30dp"
      android:layout_marginBottom="-10dp"
      android:background="@drawable/height_background">



    <TextView
        android:id="@+id/heightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/height"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal" />



    <SeekBar
        android:id="@+id/seekbarHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:thumbTint="@color/white"
        android:layout_marginBottom="20dp"
        android:progressTint="#FF4c4c"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/currentHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_170"
        android:textSize="40sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/heightCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_toEndOf="@id/currentHeight"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"/>

  </RelativeLayout>

  <android.widget.Button
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:id="@+id/calculateBMI"
      android:layout_alignParentBottom="true"
      android:textSize="18sp"
      android:background="@drawable/buttonbackground"
      android:text="@string/calculate_your_bmi"
      android:textColor="#BFFFFFFF"
      android:textStyle="bold"
      android:layout_margin="15dp"/>
</RelativeLayout>